--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,7 +22,7 @@
 		<!-- TODO Add active to mode when clicked-->
 		<div class="navbar navbar-item">
 			<div class="navbar-item-menu active" id="home">
-				<a href="/VulnerableApp">Home of the brave</a>
+				<a href="/VulnerableApp">Home</a>
 			</div>
 			<div class="navbar-item-menu" id="about">
 				<a href="#about">About Us</a>
