--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Vulnerable App</title>
+	<title>Forked Vulnerable App</title>
 	<link rel="stylesheet" href="vulnerableApp.css" />
 </head>
 
